[tool.poetry]
name = "discord-bot-sd"
version = "0.1.0"
description = ""
authors = ["Rounak-28 <rounakkumbhakar2004@gmail.com>"]
readme = "README.md"
packages = [{include = "discord_bot_sd"}]

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^2.1.0"
python-dotenv = "^0.21.1"
replicate = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
